# Nonfaction

./: .gitignore  Cargo.toml  docker-compose.yml  nonfaction.toml.example  wrangler.toml
crates/nf-api/: Cargo.toml
crates/nf-api/src/: error.rs  lib.rs  pagination.rs  rate_limit.rs  router.rs  state.rs
crates/nf-api/src/handlers/: docs.rs  entities.rs  export.rs  graph.rs  mod.rs  search.rs  submissions.rs  watchlist.rs
crates/nf-cli/: Cargo.toml
crates/nf-cli/src/: config.rs  lib.rs  main.rs
crates/nf-core/: Cargo.toml
crates/nf-core/src/: entities.rs  error.rs  lib.rs  relationships.rs  schema.rs  source.rs
crates/nf-crowd/: Cargo.toml
crates/nf-crowd/src/: error.rs  lib.rs  reputation.rs  review.rs  submission.rs  watchlist.rs
crates/nf-graph/: Cargo.toml
crates/nf-graph/src/: cluster.rs  community.rs  export.rs  flow.rs  graph.rs  lib.rs  temporal.rs  timing.rs
crates/nf-ingest/: Cargo.toml
crates/nf-ingest/src/: csv.rs  dedup.rs  error.rs  html.rs  lib.rs  ner.rs  normalize.rs  pdf.rs  pipeline.rs  table.rs
crates/nf-scrape/: Cargo.toml
crates/nf-scrape/src/: config.rs  framework.rs  lib.rs
crates/nf-scrape/src/sources/: congress.rs  fec.rs  mod.rs  opensecrets_fec_bulk.rs  pacer.rs  recap.rs
crates/nf-search/: Cargo.toml
crates/nf-search/src/: error.rs  index.rs  indexer.rs  lib.rs  query.rs  searcher.rs
crates/nf-store/: Cargo.toml
crates/nf-store/migrations/: 001_entities.sql  002_relationships.sql  003_documents.sql  004_audit_log.sql  005_submissions.sql  006_watchlist.sql  007_fk_constraints_and_indexes.sql
crates/nf-store/src/: archive.rs  audit.rs  audited_repository.rs  db.rs  dedup.rs  error.rs  lib.rs  migration.rs  repository.rs
crates/nf-verify/: Cargo.toml
crates/nf-verify/src/: crossref.rs  error.rs  fec.rs  lib.rs  pipeline.rs  result.rs  url.rs
infra/worker/: d1-schema.sql  seed-data.sql  tsconfig.json
infra/worker/src/: index.ts
web/: next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/about/: page.tsx
web/src/app/api-docs/: page.tsx
web/src/app/conduct/: page.tsx
web/src/app/contact/: page.tsx
web/src/app/donate/: page.tsx
web/src/app/entity/[id]/: EntityClient.tsx  page.tsx
web/src/app/faq/: page.tsx
web/src/app/graph/: page.tsx
web/src/app/leaderboard/: page.tsx
web/src/app/methodology/: page.tsx
web/src/app/officials/: page.tsx
web/src/app/officials/[id]/: page.tsx
web/src/app/privacy/: page.tsx
web/src/app/search/: page.tsx
web/src/app/sources/: page.tsx
web/src/app/story-packages/: page.tsx
web/src/app/submit/: page.tsx
web/src/app/terms/: page.tsx
web/src/app/timing/: page.tsx
web/src/app/updates/: page.tsx
web/src/app/watchlist/: page.tsx
web/src/components/layout/: Footer.tsx  Header.tsx
web/src/components/ui/: Accordion.tsx  Avatar.tsx  Badge.tsx  Breadcrumb.tsx  Button.tsx  Card.tsx  Dialog.tsx  EmptyState.tsx  Input.tsx  ProgressBar.tsx  ScrollArea.tsx  SearchInput.tsx  Select.tsx  Skeleton.tsx  SourceNote.tsx  Stat.tsx  Table.tsx  Tabs.tsx  Textarea.tsx  Tooltip.tsx
web/src/lib/: api.ts
web/tests/: screenshots.spec.ts
