[package]
name = "nf-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Axum REST + GraphQL API — public endpoints, auth, rate limiting"

[dependencies]
nf-core = { path = "../nf-core" }
nf-store = { path = "../nf-store" }
nf-search = { path = "../nf-search" }
nf-graph = { path = "../nf-graph" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
zip = "2"
tantivy = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
