[package]
name = "nf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Admin CLI — import, diagnostics, scraper management, data export"

[dependencies]
nf-core = { path = "../nf-core" }
nf-store = { path = "../nf-store" }
nf-scrape = { path = "../nf-scrape" }
nf-search = { path = "../nf-search" }
nf-graph = { path = "../nf-graph" }
nf-ingest = { path = "../nf-ingest" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
tempfile = { workspace = true }
