[package]
name = "nf-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core data model — FollowTheMoney entities, relationships, source chains, schema extensions"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
tempfile = { workspace = true }
