[package]
name = "nf-scrape"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async scraper framework — rate limiting, dedup, retry, source-specific scrapers"

[dependencies]
nf-core = { path = "../nf-core" }
reqwest = { workspace = true }
tokio = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
figment = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true }
