[package]
name = "nf-search"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tantivy full-text search — indexing, querying, faceted search"

[dependencies]
nf-core = { path = "../nf-core" }
tantivy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
